src/theme/variables.scss
/* ... */
.channel-ts{
  width: 50px;
  height: 14px;
  font-family: Montserrat;
  font-size: 11px;
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.27;
  letter-spacing: normal;
  color: #a0a2c4;

  margin-left: 5px;
  vertical-align: middle;
}

.channel-info-div{
  margin-left: 12px;
}

.channel-post{
  width: 100%;
  height: 100%;
  font-family: Montserrat;
  font-size: 13px;
  font-weight: 500;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.23;
  letter-spacing: normal;
  text-align: left;
  color: #161740;
}

.channel-post-div{
  margin-top: 3px;
  // margin-right: 41px;
  // padding-left: 37px;
  // padding-right: 37px;
  // width: 100%;
}

.channel-post-img{
  width: 268px;
  height: 160px;
  object-fit: contain;
  border-radius: 11px;
  margin-top: 10px;
}


.comment{
  width: 16px;
  height: 14px;
  background-image: url("../assets/images/comment.svg");
  object-fit: contain;
  vertical-align: middle;
  margin-left: 33px;
}

.comment-s {
  width: 16px;
  height: 14px;
  background-image: url("../assets/images/comment-s.svg");
  object-fit: contain;
  vertical-align: middle;
  margin-left: 33px;
}

.heart {
  width: 14.7px;
  height: 13.6px;
  object-fit: contain;

  vertical-align: middle;
}

.like{
  content: url(../assets/images/like.svg);
  width: 14.7px;
  height: 13.6px;
  object-fit: contain;

  vertical-align: middle;
}

.like-s{
  content: url(../assets/images/like-s.svg);
  width: 14.7px;
  height: 13.6px;
}
.like-text{
  width: 6px;
  height: 14px;
  font-family: Montserrat;
  font-size: 11px;
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.27;
  letter-spacing: normal;
  text-align: center;
  color: #a0a2c4;

  margin-left: 4px;
}

.like-s-text{
  width: 6px;
  height: 14px;
  font-family: Montserrat;
  font-size: 11px;
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.27;
  letter-spacing: normal;
  text-align: center;
  color: #f55555;

  margin-left: 4px;
}

.heart-text{
  width: 6px;
  height: 14px;
  font-family: Montserrat;
  font-size: 11px;
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.27;
  letter-spacing: normal;

  color: #f55555;

  vertical-align: middle;

  margin-left: 4px;
}

.channel-post-heart-comment-div{
  margin-top: 10px;
  margin-bottom: 17px;
  width: 100%;
  // display: flex;
}

.comment-text{
  width: 6px;
  height: 14px;
  font-family: Montserrat;
  font-size: 11px;
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.27;
  letter-spacing: normal;
  text-align: center;
  color: #a0a2c4;

  margin-left: 4px;
}

.Rectangle-281 {
  width: 100%;
  height: 2px;
  background-color: #f0f1ff;
}


ion-header {
  box-shadow: 0px 0px 2px 0px rgb(199, 199, 199);

  ion-slides {
    padding-top:10px;

    ion-label {
      margin: 16px 0 12px;
      font-size: 13px;
      font-weight: 500;
      color: #959595;
    }

    .highlight {
      // padding-bottom: 10px;
      border-bottom: 1px solid #007AFF;

      ion-label {
        color: #007AFF !important;
      }
    }
  }
}


.channel-detail-div{
  width: 100%;
  height: 100%;
  margin-left: 12px;
  vertical-align: middle;
  margin-top: 3px;
}

.channel-detail-text-div{
  width: 100%;
  height: 100%;
  vertical-align: middle;

  margin-top: 7px;
}

.new-feed-div{
  padding-left: 37px;
  padding-top: 11px;

}
.new-feed{
  width: 100%;
  height: 22px;
  object-fit: contain;
  font-family: Montserrat;
  font-size: 18px;
  font-weight: 500;
  font-stretch: normal;
  font-style: normal;
  // line-height: 3.11;
  letter-spacing: normal;
  text-align: left;
  color: #368bff;
  text-transform: none;
}


.channel-follower2{
  width: 75px;
  height: 18px;
  font-family: Montserrat;
  font-size: 11px;
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.27;
  letter-spacing: normal;
  text-align: left;
  color: #a0a2c4;

  margin-left: 3.6px;
}

.tab-text{
  width: 76px;
  height: 18px;
  font-family: Montserrat;
  font-size: 14px;
  font-weight: bold;
  font-stretch: normal;
  font-style: normal;
  // line-height: 1.29;
  letter-spacing: 0.35px;
  text-align: left;
  color: #368bff;
}

.detail-line {
  margin-top: 20px;
  height: 2px;
  background-color: rgba(34, 34, 34, 0.07);
}

.line-div{
  height: 2px;
  background-color: rgba(34, 34, 34, 0.07);
}

.wrapper{
  width: 100%;
  height: 100%;

  text-align: center;
  margin-bottom: 150px;
}

.box{
  width: 171px; 
  height: 153px;

  display: inline-block;
  vertical-align: middle;
  margin: 0 auto;
}

.help{
width: 0;
height: 100%;
display: inline-block;
vertical-align: middle;
}

.channel-post-detail-div{
  margin-top: 3px;
  // margin-right: 41px;
  padding-left: 37px;
  padding-right: 37px;
  width: 100%;
}

.post-detail-ts{
  width: 74px;
  height: 14px;
  font-family: Montserrat;
  font-size: 11px;
  font-weight: 600;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.27;
  letter-spacing: normal;
  text-align: center;
  color: #a0a2c4;

  vertical-align: middle;
  margin-left: 23.6px;
}


.center-content-div{
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center; 
  text-align: center;
}

.center-content{
  width: 100%;
  margin-top: calc(50%);
}


.all-empty {
  // width: 128px;
  // height: 29px;
  font-family: Montserrat;
  font-size: 24px;
  font-weight: 500;
  font-stretch: normal;
  font-style: normal;
  line-height: 2.42;
  letter-spacing: 1.2px;
  text-align: center;
  color: #8888b0;
}

.all-empty-content-text {
  // width: 258px;
  // height: 19px;
  font-family: Montserrat;
  font-size: 16px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 1.38;
  letter-spacing: 1.6px;
  text-align: center;
  color: #8888b0;
}

.explore-feeds {
  height: 41px;

  margin-left: 34px;
  margin-right: 34px;
  
  margin-top: 60px;
  margin-bottom: 10px;

}
/* ... */

